--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "voxel_engine"
+path = "src/lib.rs"
+
 [dependencies]
 vulkano = "0.34.1"
+winit = "0.29.4"
