--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,10 @@ edition = "2021"
 name = "voxel_engine"
 path = "src/lib.rs"
 
+[[bin]]
+name = "vx"
+path = "src/main.rs"
+
 [dependencies]
 vulkano = "0.34.1"
 winit = "0.29.4"
