Renamed main.rs to 'triangle.rs' and changed the binary in Cargo.toml to an example target so as to separate this code from the actual binaries which this engine will soon be ran using.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,9 @@ edition = "2021"
 name = "voxel_engine"
 path = "src/lib.rs"
 
-[[bin]]
-name = "vx"
-path = "src/main.rs"
+[[example]]
+name = "triangle"
+path = "src/triangle.rs"
 
 [dependencies]
 vulkano = "0.34.1"
