Created another example for manipulating verticices with a compute shader. Got the program to run, but triangle still does not move.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ path = "src/lib.rs"
 [[example]]
 name = "triangle"
 path = "src/triangle.rs"
+[[example]]
+name = "compute"
+path = "src/triangle_with_compute_shader.rs"
 
 [dependencies]
 vulkano = "0.34.1"
