Added directions for triangle with compute shader example to README, updated names of binaries to be more descriptive. Got rid of dynamic_state in graphics pipeline creation, and made the input assembly default.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,10 @@ name = "voxel_engine"
 path = "src/lib.rs"
 
 [[example]]
-name = "triangle"
-path = "src/triangle.rs"
+name = "tri"
+path = "src/triangle_with_direct_vertex_manipulation.rs"
 [[example]]
-name = "compute"
+name = "tri_cs"
 path = "src/triangle_with_compute_shader.rs"
 
 [dependencies]
